<?xml version="1.0"?>
<package>
  <name>csl_pioneer_drivers</name>
  <version>0.0.0</version>
  <description>
      Code for setting up and controlling pioneer_3dx, pioneer_2at robot
      instances in the Control Systems Lab of NTUA
  </description>
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <author>Apostolos Poulias</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <metapackage/>
  </export>
</package>
